Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-365

ClientTest.TestReplicatedMultiTabletTableFailover fails with backpressure errors

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • M4.5
    • None
    • client, test
    • None

    Description

      This test is failing relatively frequently - it seems that somehow the TS rpc queue is getting full. We should add some flag to enable dumping the RPC queue when backpressure kicks in to help debug cases like this, and get to the bottom of the issue.

      Attachments

        Activity

          People

            adar Adar Dembo
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: