KUDU-365: dump contents of RPC queue in debug builds when full

We've been seeing RPC backpressure related failures in client-test on
replicated tables, but we don't know what kind of RPCs are filling up the
queues. This ought to help with debugging:

I0623 17:17:44.456665 32950 service_pool.cc:113] GetTableLocations request \
  on kudu.master.MasterService from 127.0.0.1:42406 dropped due to \
  backpressure. The service queue is full; it has 50 items.
I0623 17:17:44.457929 32950 service_pool.cc:114] Contents of service queue:
I0623 17:17:44.457948 32950 service_pool.cc:115] Call GetTableLocations from 127.0.0.1:42406 (#61)
Call GetTableLocations from 127.0.0.1:42406 (#62)
Call GetTableLocations from 127.0.0.1:42406 (#63)
Call GetTableLocations from 127.0.0.1:42406 (#64)
Call GetTableLocations from 127.0.0.1:42406 (#65)
...

Note: we're not guaranteed to see the actual queue contents since the
blocking put and the ToString aren't atomic. I briefly explored making them
atomic and decided it wasn't worth the complexity.

Change-Id: Ie6665c05841ad9729556075aa90f75a5ff21fc8f
Reviewed-on: http://gerrit.ent.cloudera.com:8080/3262
Tested-by: Adar Dembo <adar@cloudera.com>
Reviewed-by: Jean-Daniel Cryans <jdcryans@cloudera.com>